--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Revision history for Mail-Signature
+Revision history for MIME-Signature
 
 0.01    Date/time
         First version, released on an unsuspecting world.
